# GCMatchedFilter

./: .gitignore  .gitmodules  README.md  setup.cfg
docs/: index.rst
globber/: __init__.py  core.py  ngc5897.py
globber/dust/: core.py
globber/dust/tests/: test_core.py
globmfer/: dust.py
mpi/: 1-compute-cluster-likelihoods.sh  cluster-ll.sh  isochrone-ll.sh  noncluster-ll.sh
notebooks/: NGC 5897 - Figure - orbital properties.ipynb  NGC 5897 - Figure - photometry.ipynb  NGC 5897 - old school matched filter.ipynb  NGC 5897 - stream models.ipynb  NGC 5897 isochrone.ipynb  PS1 NGC 5897.ipynb  Proper Motions of MW stuffs.ipynb  Why CMD outliers.ipynb  XCov NGC 5897.ipynb  XD isochrone.ipynb  interpolate isochrone.ipynb  isochrone.ipynb
scripts/: FIX_OLD_RUN.py  compute-cmd-likelihoods.py  compute-xd-likelihoods.py  deredden-ps1.py  find-em.py  find-the-tails.py  isochrone-to-xcov.py  make-filtered-images.py  photometry-to-xcov.py  xd-cmd.py
