[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = globber
description = Stellar streams around globular clusters
long_description = Searching around globular clusters for tidal debris
author = Adrian M. Price-Whelan
author_email = adrn@astro.columbia.edu
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = adrn/globber

[entry_points]
astropy-package-template-example = globber.example_mod:main